src/main/java/com/example/javista/dto/request/rejectionReason/RejectionReasonQueryRequest.java
package com.example.javista.dto.request.rejectionReason;

public class RejectionReasonQueryRequest {}
